use index in link

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -340,7 +340,7 @@ p {
 
 /* line 102, ../sass/global.sass */
 .course--module {
-  background: #c44d68;
+  background: #4d9ec4;
   border-radius: 8px;
   padding: 30px;
   margin-bottom: 30px;
